--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="base-station" xmlns:ivy="antlib:org.apache.ivy.ant">
+<project name="base-station-V3.0" xmlns:ivy="antlib:org.apache.ivy.ant">
 
 	<property name="src" value="src" />
 	<property name="lib" value="lib" />	
