Desktop Update 22/12 Location search complete

--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,11 @@
 	<classpathentry kind="lib" path="primefaces-5.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="omnifaces-2.2.jar"/>
+	<classpathentry kind="lib" path="google-maps-services-0.1.9.jar"/>
+	<classpathentry kind="lib" path="okhttp-2.7.0.jar"/>
+	<classpathentry kind="lib" path="gson-2.5.jar"/>
+	<classpathentry kind="lib" path="okio-1.6.0.jar"/>
+	<classpathentry kind="lib" path="joda-primitives-1.0.jar"/>
+	<classpathentry kind="lib" path="joda-time-2.9.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
